Implemented createReducer tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -66,6 +66,7 @@
     "navigator": false,
     "URL": false,
     "window": false,
-    "describe": false
+    "describe": false,
+    "expect": false
   }
 }
