--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "parser": "babel-eslint",
   "plugins": ["fp", "unicorn", "sonarjs"],
   "rules": {
-    "no-unused-expressions": [2, {"allowShortCircuit": true}],
+    "no-unused-expressions": 0,
     "arrow-parens": [2, "as-needed"],
     "brace-style": [2, "stroustrup"],
     "comma-dangle": [2, {
@@ -31,16 +31,21 @@
       "maxEOF": 1
     }],
     "import/no-extraneous-dependencies": [2, {"devDependencies": ["**/*.stories.js", "**/*.test.js", "**/.storybook/*.js"]}],
-    "jsx-a11y/no-noninteractive-element-to-interactive-role": [0],
     "max-len": 0,
     "no-console": [2, {
       "allow": ["log", "warn", "error"]
     }],
     "no-var": 2,
     "object-curly-spacing": [2, "never"],
+    "object-curly-newline": [2, {
+      "multiline": true,
+      "consistent": true
+    }],
+    "function-paren-newline": [2, "multiline"],
     "operator-linebreak": [2, "before", {
       "overrides": {"=": "after"}
     }],
+    "implicit-arrow-linebreak": 0,
     "react/jsx-filename-extension": 0,
     "react/no-unused-prop-types": 1,
     "react/require-default-props": 0,
